--- a/static/messages.css
+++ b/static/messages.css
@@ -1,9 +1,19 @@
+#clipboard {
+  background: #EA0;
+  position: fixed;
+  left: 80vw;
+  top: 0;
+  height: 100vh;
+  width: 50vw;
+  z-index: 0;
+}
+
 .chat {
-  width: 300px;
   border: solid 0px #EEE;
   display: flex;
   flex-direction: column;
-  padding: 0px;
+  padding-left: 20px;
+  z-index: 5;
 }
 
 .messages {
@@ -18,9 +28,11 @@
   margin-top: 5px;
   margin-bottom: 5px;
   display: inline-block;
+  max-width: 45vw;
+  word-wrap: break-word;
 }
 
-.yours {
+.yours, .mine {
   align-items: flex-start;
 }
 
@@ -53,6 +65,37 @@
   border-bottom-right-radius: 10px;
 }
 
+.mine .message {
+  color: white;
+  margin-right: 25%;
+  background: rgb(0, 120, 254);
+  position: relative;
+}
+
+.mine .message.last:before {
+  content: "";
+  position: absolute;
+  z-index: 0;
+  bottom: 0;
+  left: -7px;
+  height: 20px;
+  width: 20px;
+  background: rgb(0, 120, 254);
+  border-bottom-right-radius: 15px;
+}
+
+.mine .message.last:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
+  right: -10px;
+  width: 10px;
+  height: 20px;
+  background: white;
+  border-bottom-left-radius: 10px;
+}
+/*
 .mine {
   align-items: flex-end;
 }
@@ -86,4 +129,4 @@
   height: 20px;
   background: white;
   border-bottom-left-radius: 10px;
-}
+}*/
