--- a/static/messages.css
+++ b/static/messages.css
@@ -43,6 +43,24 @@
   display: none;
 }
 
+.btn_add {
+  width: 50px; 
+  height: 50px;
+  border-radius: 50px;
+  display: absolute; 
+  right: 10px; 
+  top: 10px;
+  margin-bottom: 10px;
+}
+
+.btn_add_extra {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
 .chat {
   border: solid 0px #EEE;
   display: flex;
